# North-Star-Submission

./: .env.example  .gcloudignore  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  Makefile  README.md  ROADMAP.md  SUBMISSION.md  THEME.md  pyproject.toml  requirements.txt  root.md
.github/workflows/: ci.yml  deploy-frontend.yml
.streamlit/: config.toml
android-native/: README.md  build.gradle.kts  settings.gradle.kts
android-native/example/: build.gradle.kts
android-native/example/src/main/: AndroidManifest.xml
android-native/example/src/main/java/com/polaris/studykit/example/: MainActivity.kt
android-native/polaris-study-kit/: build.gradle.kts
android-native/polaris-study-kit/src/main/java/com/polaris/studykit/: Citations.kt  Flashcards.kt  PolarisArea.kt  PolarisStudy.kt  PowerMode.kt  Quiz.kt  Readability.kt  SpacedRepetition.kt  WritingChecker.kt
android-native/polaris-study-kit/src/test/java/com/polaris/studykit/: PolarisAreaTest.kt
docs/: discord-announcements-sync.md  polly-persona-prompt.md
fitness agents for use/: README.md
fitness agents for use/agent mds/: data_parser.md  fitness_analyst.md  growth_planner.md  plan_reviewer.md
fitness agents for use/core programs/: analyze.py
fitness agents for use/sample_data/: run.csv
frontend/: .env.production  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  theme.css
frontend/src/components/: ui.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Clubs.tsx  Fitness.tsx  Home.tsx  Notes.tsx  Planner.tsx  Pomodoro.tsx  Recall.tsx  Study.tsx  Writing.tsx
install/: README.md  android-termux.sh  install.ps1  install.sh  ios-setup.sh
ios-native/: Package.swift  README.md
ios-native/Example/: ContentView.swift
ios-native/Sources/PolarisStudyKit/: Citations.swift  Flashcards.swift  PolarisArea.swift  PolarisStudy.swift  Quiz.swift  Readability.swift  SpacedRepetition.swift  WritingChecker.swift
ios-native/Tests/PolarisStudyKitTests/: PolarisAreaTests.swift
local llm model to use for studying offline/: Modelfile  README.md  run_study_llm.py
scripts/: polly_persona_chat.py
study local notes with vector db/: README.md  ask.py  ingest.py
study local notes with vector db/sample_notes/: photosynthesis.md
tests/: test_life_features.py  test_smoke.py  test_writing.py
webui/: app.py
